--- a/E5/index.html
+++ b/E5/index.html
@@ -6,11 +6,8 @@
   </head>
   <body>
       <h1>Exercise 5: Wireframes</h1>
-      <p>
-        <img src="DesktopWireframe.jpg" alt="number 1"/>
-      </p>
-      <p>
-        <img src="MobileWireframe.jpg" alt="number 1"/>
-      </p>
+          <img src="desktopWireframe.jpg" alt="number 1"/>
+          <img src="mobileWireframe.jpg" alt="number 1"/>
+
   </body>
 </html>
