--- a/index.html
+++ b/index.html
@@ -3,16 +3,23 @@
     <head>
         <meta charset="utf-8">
         <title>Sandy Chuah</title>
+        <link rel="stylesheet" href="https://use.typekit.net/ofy6ohe.css">
         <link rel="stylesheet" href="css/main.css">
+        <style>
+          p {margin-bottom: 1em;
+          }
+        </style>
     </head>
     <body>
-      <h1>Sandy's Work</h1>
+      <div><h1>Sandy's Work</h1></div>
       <ul>
         <li><a href="E1/index.html">Exercise 1: 20 Questions</a></li>
         <li><a href="E2/index.html">Exercise 2: Make the Grid</a></li>
         <li><a href="E3/index.html">Exercise 3: Organization and Naming</a></li>
         <li><a href="E4/index.html">Exercise 4: Site Map</a></li>
         <li><a href="E5/index.html">Exercise 5: Wireframes</a></li>
+        <li><a href="E6/index.html">Exercise 6: Type on Screen I</a></li>
+        <li><a href="E7/index.html">Exercise 7: Seven-Principles</a></li>
       </ul>
     </body>
   </html>
