--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </head>
     <body>
       <div><h1>Sandy's Work</h1></div>
+      <h2>Exercises:</h2>
       <ul>
         <li><a href="E1/index.html">Exercise 1: 20 Questions</a></li>
         <li><a href="E2/index.html">Exercise 2: Make the Grid</a></li>
@@ -21,5 +22,13 @@
         <li><a href="E6/index.html">Exercise 6: Type on Screen I</a></li>
         <li><a href="E7/index.html">Exercise 7: Seven-Principles</a></li>
       </ul>
+
+      <h2>Porto, Portugal Websites:</h2>
+      <ul>
+        <li><a href="placeWebsite/index.html">Website</a></li>
+        <li><a href="placeWebsite/home/index.html">Home Page</a></li>
+        <li><a href="placeWebsite/about/index.html">About Page</a></li>
+        <li><a href="placeWebsite/sights/index.html">Sights Page</a></li>
+        <li><a href="placeWebsite/24hours/index.html">24 Hours Page</a></li>
     </body>
   </html>
