--- a/placeWebsite/about/index.html
+++ b/placeWebsite/about/index.html
@@ -13,7 +13,7 @@
   <body>
       <h1>About Page</h1>
       <p>
-        <img src="About.png" alt="number 1"/>
+        <img src="about.png" alt="number 1"/>
       </p>
   </body>
 </html>
