--- a/placeWebsite/sights/index.html
+++ b/placeWebsite/sights/index.html
@@ -13,7 +13,7 @@
   <body>
       <h1>Sights Page</h1>
       <p>
-        <img src="Sights.png" alt="number 1"/>
+        <img src="sights.png" alt="number 1"/>
       </p>
   </body>
 </html>
