--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li><a href="E7/index.html">Exercise 7: Seven-Principles</a></li>
       </ul>
 
-      <h2>Porto, Portugal Websites:</h2>
+      <h2>Porto, Portugal Web Pages:</h2>
       <ul>
         <li><a href="placeWebsite/index.html">Website</a></li>
         <li><a href="placeWebsite/home/index.html">Home Page</a></li>
