--- a/placeWebsite/home/index.html
+++ b/placeWebsite/home/index.html
@@ -13,7 +13,7 @@
   <body>
       <h1>Home Page</h1>
       <p>
-        <img src="home.png" alt="number 1"/>
+        <img src="Home.png" alt="number 1"/>
       </p>
   </body>
 </html>
