--- a/p1/index.html
+++ b/p1/index.html
@@ -8,11 +8,13 @@
   </head>
   <body>
     <h1>Porto, Portugal</h1>
-    <h2>Home</h2>
-    <h2>About</h2>
-    <h2>Sights</h2>
-    <h2>24 Hours in Porto</h2>
-    <h2>Search</h2>
+    <ul>
+      <li>Home</li>
+      <li>About</li>
+      <li>Sights</li>
+      <li>24 Hours in Porto</li>
+      <li>Search</li>
+    </ul>
     <p>
       <img src="images/portoOverlook.jpg" alt="number 1"/>
     </p>
