Update FIle Name

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 
       <h2>Porto, Portugal Web Pages:</h2>
       <ul>
-        <li><a href="placeWebsite/index.html">Website</a></li>
-        <li><a href="placeWebsite/home/index.html">Home Page</a></li>
-        <li><a href="placeWebsite/about/index.html">About Page</a></li>
-        <li><a href="placeWebsite/sights/index.html">Sights Page</a></li>
-        <li><a href="placeWebsite/24hours/index.html">24 Hours Page</a></li>
+        <li><a href="p1/index.html">Website</a></li>
+        <li><a href="p1/home/index.html">Home Page</a></li>
+        <li><a href="p1/about/index.html">About Page</a></li>
+        <li><a href="p1/sights/index.html">Sights Page</a></li>
+        <li><a href="p1/24hours/index.html">24 Hours Page</a></li>
     </body>
   </html>
