--- a/E3/index.html
+++ b/E3/index.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Exercise 3: Organizing and Naming</h1>
         <p>
-          <img src="organizationAndNaming.png" alt="number 1"/>
+          <img src="organizationAndNaming.png" alt="Folder Screenshot"/>
         </p>
     </body>
   </html>
