--- a/E4/index.html
+++ b/E4/index.html
@@ -7,7 +7,7 @@
   <body>
       <h1>Exercise 4: Site Map</h1>
       <p>
-        <img src="SiteMap.png" alt="number 1"/>
+        <img src="SiteMap.png" alt="Sitemap"/>
       </p>
   </body>
 </html>
