--- a/E6/index.html
+++ b/E6/index.html
@@ -6,11 +6,11 @@
   </head>
   <body>
       <h1>Exercise 6: Type on Screen I</h1>
-          <img src="layout1.png" alt="number 1"/>
-          <img src="layout2.png" alt="number 1"/>
-          <img src="layout3.png" alt="number 1"/>
-          <img src="layout4.png" alt="number 1"/>
-          <img src="layout5.png" alt="number 1"/>
-          <img src="layout6.png" alt="number 1"/>
+          <img src="layout1.png" alt="Black Text Center Aligned"/>
+          <img src="layout2.png" alt="Black Text Right Aligned"/>
+          <img src="layout3.png" alt="Black Text Left Aligned"/>
+          <img src="layout4.png" alt="Old paper"/>
+          <img src="layout5.png" alt="Raven background"/>
+          <img src="layout6.png" alt="Heart background"/>
   </body>
 </html>
