--- a/index.html
+++ b/index.html
@@ -5,10 +5,6 @@
         <title>Sandy Chuah</title>
         <link rel="stylesheet" href="https://use.typekit.net/ofy6ohe.css">
         <link rel="stylesheet" href="css/main.css">
-        <style>
-          p {margin-bottom: 1em;
-          }
-        </style>
     </head>
     <body>
       <div><h1>Sandy's Work</h1></div>
@@ -24,7 +20,7 @@
       </ul>
       <h2>Porto, Portugal Web Pages:</h2>
       <ul>
-        <li><a href="p1/index.html">Website</a></li>
+        <li><a href="p/index.html">Website</a></li>
         <li><a href="p1/home/index.html">Home Page</a></li>
         <li><a href="p1/about/index.html">About Page</a></li>
         <li><a href="p1/sights/index.html">Sights Page</a></li>
