--- a/p1/index.html
+++ b/p1/index.html
@@ -7,21 +7,23 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
+    <!-- Header -->
+    <header>
+      <p>Porto, Portugal</P>
+      <nav>
+        <ul>
+          <li>About</li>
+          <li>Sights</li>
+          <li>24 Hours in Porto</li>
+          <li>Search</li>
+        </ul>
+      <nav>
+    </header>
     <h1>Porto, Portugal</h1>
-    <ul>
-      <li>Home</li>
-      <li>About</li>
-      <li>Sights</li>
-      <li>24 Hours in Porto</li>
-      <li>Search</li>
-    </ul>
-    <p>
-      <img src="images/portoOverlook.jpg" alt="number 1"/>
-    </p>
-    <p>Portugal’s second city is a laid-back destination full of pretty shops, historic alleyways, and stories from its time as an iconic European trade city. Visit for its magnificent architecture, its burgeoning modern gastronomy, and the delights of a relaxed city with a strong cultural identity.
-    </p>
+    <p><img src="images/portoOverlook.jpg" alt="Porto High View"/></p>
+    <p>Portugal’s second city is a laid-back destination full of pretty shops, historic alleyways, and stories from its time as an iconic European trade city. Visit for its magnificent architecture, its burgeoning modern gastronomy, and the delights of a relaxed city with a strong cultural identity.</p>
+    <footer>
+      <p>© 2020 Travel Blog. Created by Sandy Chuah.</p>
+    </footer>
   </body>
-  <footer>
-    <p>© 2020 Travel Blog. Created by Sandy Chuah.</p>
-  </footer>
 </html>
