--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </ul>
       <h2>Porto, Portugal Web Pages:</h2>
       <ul>
-        <li><a href="p/index.html">Website</a></li>
+        <li><a href="p1/index.html">Website</a></li>
         <li><a href="p1/home/index.html">Home Page</a></li>
         <li><a href="p1/about/index.html">About Page</a></li>
         <li><a href="p1/sights/index.html">Sights Page</a></li>
