--- a/index.html
+++ b/index.html
@@ -9,21 +9,41 @@
     <body>
       <div><h1>Sandy's Work</h1></div>
       <h2>Exercises:</h2>
-      <ul>
-        <li><a href="E1/index.html">Exercise 1: 20 Questions</a></li>
-        <li><a href="E2/index.html">Exercise 2: Make the Grid</a></li>
-        <li><a href="E3/index.html">Exercise 3: Organization and Naming</a></li>
-        <li><a href="E4/index.html">Exercise 4: Site Map</a></li>
-        <li><a href="E5/index.html">Exercise 5: Wireframes</a></li>
-        <li><a href="E6/index.html">Exercise 6: Type on Screen I</a></li>
-        <li><a href="E7/index.html">Exercise 7: Seven-Principles</a></li>
-      </ul>
+        <ul>
+          <li><a href="E1/index.html">Exercise 1: 20 Questions</a></li>
+          <li><a href="E2/index.html">Exercise 2: Make the Grid</a></li>
+          <li><a href="E3/index.html">Exercise 3: Organization and Naming</a></li>
+          <li><a href="E4/index.html">Exercise 4: Site Map</a></li>
+          <li><a href="E5/index.html">Exercise 5: Wireframes</a></li>
+          <li><a href="E6/index.html">Exercise 6: Type on Screen I</a></li>
+          <li><a href="E7/index.html">Exercise 7: Seven-Principles</a></li>
+        </ul>
+      <h2>Porto, Portugal Website</h2>
+        <ul>
+          <li><a href="website/index.html">Website</a></li>
+        </ul>
       <h2>Porto, Portugal Web Pages:</h2>
-      <ul>
-        <li><a href="p1/index.html">Website</a></li>
-        <li><a href="p1/home/index.html">Home Page</a></li>
-        <li><a href="p1/about/index.html">About Page</a></li>
-        <li><a href="p1/sights/index.html">Sights Page</a></li>
-        <li><a href="p1/24hours/index.html">24 Hours Page</a></li>
-    </body>
+        <ul>
+          <li><a href="p1/home/index.html">Home Page</a></li>
+          <li><a href="p1/about/index.html">About Page</a></li>
+          <li><a href="p1/sights/index.html">Sights Page</a></li>
+          <li><a href="p1/24hours/index.html">24 Hours Page</a></li>
+        <ul>
+      <h2>Updated Porto, Portugal Web Pages:</h2>
+        <ul>
+          <li><a href="p1/typeStyle/index.html">Type Style</a></li>
+          <li><a href="p1/updateHome/index.html">Home Page</a></li>
+          <li><a href="p1/updateAbout/index.html">About Page</a></li>
+          <li><a href="p1/updateSights/index.html">Sights Page</a></li>
+          <li><a href="p1/update24hours/index.html">24 Hours Page</a></li>
+        </ul>
+      <h2>Second Porto, Portugal Designs</h2>
+        <ul>
+          <li><a href="p1.4/typeStyle/index.html">Type Style</a></li>
+          <li><a href="p1.4/2ndHome/index.html">Home Page</a></li>
+          <li><a href="p1.4/2ndAbout/index.html">About Page</a></li>
+          <li><a href="p1.4/2ndSights/index.html">Sights Page</a></li>
+          <li><a href="p1.4/2nd24hours/index.html">24 Hours Page</a></li>
+        </ul>
+      </body>
   </html>
