Change File Names

--- a/p2/2nd24hours/index.html
+++ b/p2/2nd24hours/index.html
@@ -13,7 +13,7 @@
   <body>
       <h1>Second 24 Hours Page</h1>
       <p>
-        <img src="2nd24hours.png" alt="number 1"/>
+        <img src="2nd24Hours.png" alt="number 1"/>
       </p>
   </body>
 </html>
