--- a/p2/2ndHome/index.html
+++ b/p2/2ndHome/index.html
@@ -13,7 +13,7 @@
   <body>
       <h1>Second Home Page</h1>
       <p>
-        <img src="2ndhome.png" alt="number 1"/>
+        <img src="2ndHome.png" alt="number 1"/>
       </p>
   </body>
 </html>
