--- a/p1/update24hours/index.html
+++ b/p1/update24hours/index.html
@@ -9,7 +9,7 @@
   <body>
       <h1>Updated 24 Hours Page</h1>
       <p>
-        <img src="24Hours.png" alt="number 1"/>
+        <img src="24Hours.png" alt="24 Hours"/>
       </p>
   </body>
 </html>
