--- a/p1/index.html
+++ b/p1/index.html
@@ -2,28 +2,16 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Porto, Portugal</title>
+    <title>Website Layout</title>
     <link rel="stylesheet" href="https://use.typekit.net/ofy6ohe.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <!-- Header -->
-    <header>
-      <p>Porto, Portugal</P>
-      <nav>
-        <ul>
-          <li>About</li>
-          <li>Sights</li>
-          <li>24 Hours in Porto</li>
-          <li>Search</li>
-        </ul>
-      <nav>
-    </header>
-    <h1>Porto, Portugal</h1>
-    <p><img src="images/portoOverlook.jpg" alt="Porto High View"/></p>
-    <p>Portugal’s second city is a laid-back destination full of pretty shops, historic alleyways, and stories from its time as an iconic European trade city. Visit for its magnificent architecture, its burgeoning modern gastronomy, and the delights of a relaxed city with a strong cultural identity.</p>
-    <footer>
-      <p>© 2020 Travel Blog. Created by Sandy Chuah.</p>
-    </footer>
+    <h1>First Set of Designs</h1>
+    <p><img src="images/home.png" alt="Home Page"/></p>
+    <p><img src="images/about.png" alt="About Page"/></p>
+    <p><img src="images/sights.png" alt="Sights Page"/></p>
+    <p><img src="images/24Hours.png" alt="24 Hours Page"/></p>
+    <p><img src="images/typeStyle.png" alt="Type Styles"/></p>
   </body>
 </html>
