--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-  <html lang="en" dir ="ltr">
+  <html>
     <head>
         <meta charset="utf-8">
         <title>Sandy Chuah</title>
@@ -17,33 +17,17 @@
           <li><a href="E5/index.html">Exercise 5: Wireframes</a></li>
           <li><a href="E6/index.html">Exercise 6: Type on Screen I</a></li>
           <li><a href="E7/index.html">Exercise 7: Seven-Principles</a></li>
+          <li><a href="E8/index.html">Exercise 8: Patterns</a></li>
+          <li><a href="E9/index.html">Exercise 9: Layouts</a></li>
         </ul>
-      <h2>Porto, Portugal Website</h2>
+      <h2>Project</h2>
         <ul>
           <li><a href="website/index.html">Website</a></li>
         </ul>
       <h2>Porto, Portugal Web Pages:</h2>
         <ul>
-          <li><a href="p1/home/index.html">Home Page</a></li>
-          <li><a href="p1/about/index.html">About Page</a></li>
-          <li><a href="p1/sights/index.html">Sights Page</a></li>
-          <li><a href="p1/24hours/index.html">24 Hours Page</a></li>
-        <ul>
-      <h2>Updated Porto, Portugal Web Pages:</h2>
-        <ul>
-          <li><a href="p1/typeStyle/index.html">Type Style</a></li>
-          <li><a href="p1/updateHome/index.html">Home Page</a></li>
-          <li><a href="p1/updateAbout/index.html">About Page</a></li>
-          <li><a href="p1/updateSights/index.html">Sights Page</a></li>
-          <li><a href="p1/update24hours/index.html">24 Hours Page</a></li>
-        </ul>
-      <h2>Second Porto, Portugal Designs</h2>
-        <ul>
-          <li><a href="p2/typeStyle/index.html">Type Style</a></li>
-          <li><a href="p2/2ndHome/index.html">Home Page</a></li>
-          <li><a href="p2/2ndAbout/index.html">About Page</a></li>
-          <li><a href="p2/2ndSights/index.html">Sights Page</a></li>
-          <li><a href="p2/2nd24hours/index.html">24 Hours Page</a></li>
+          <li><a href="p1/index.html">First Design Layouts</a></li>
+          <li><a href="p2/index.html">Second Design Layous</a></li>
         </ul>
       </body>
   </html>
