--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <li><a href="E8/index.html">Exercise 8: Patterns</a></li>
           <li><a href="E9/index.html">Exercise 9: Layouts</a></li>
         </ul>
-      <h2>Project</h2>
+      <h2>Project:</h2>
         <ul>
           <li><a href="website/index.html">Website</a></li>
         </ul>
