--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h2>Porto, Portugal Web Pages:</h2>
         <ul>
           <li><a href="p1/index.html">First Design Layouts</a></li>
-          <li><a href="p2/index.html">Second Design Layous</a></li>
+          <li><a href="p2/index.html">Second Design Layouts</a></li>
         </ul>
       </body>
   </html>
