--- a/E8/index.html
+++ b/E8/index.html
@@ -3,8 +3,16 @@
     <head>
       <meta charset="utf-8">
       <title>E8</title>
+      <link rel="stylesheet" href="https://use.typekit.net/ofy6ohe.css">
+      <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
       <h1> Exercise 8: Patterns</h1>
+      <ul>
+        <li><a href="pattern1/index.html">Pattern 1</a></li>
+        <li><a href="pattern2/index.html">Pattern 2</a></li>
+        <li><a href="pattern3/index.html">Pattern 3</a></li>
+        <li><a href="pattern4/index.html">Pattern 4</a></li>
+        <li><a href="pattern5/index.html">Pattern 5</a></li>
     </body>
   </html>
