--- a/E9/index.html
+++ b/E9/index.html
@@ -3,10 +3,16 @@
     <head>
       <meta charset="utf-8">
       <title>Layouts</title>
+      <link rel="stylesheet" href="https://use.typekit.net/ofy6ohe.css">
+      <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-
-
-
+      <h1> Exercise 9: Layouts</h1>
+      <ul>
+        <li><a href="layout-1/index.html">Checker Board</a></li>
+        <li><a href="layout-2/index.html">Column Grid</a></li>
+        <li><a href="layout-3/index.html">Blog Layout</a></li>
+        <!--    <li><a href="layout-4/index.html">Pattern 4</a></li>
+                <li><a href="layout-5/index.html">Pattern 5</a></li>-->
     </body>
   <html>
