--- a/E9/layout-2/index.html
+++ b/E9/layout-2/index.html
@@ -15,6 +15,7 @@
           <div class="content"></div>
           <div class="content"></div>
           <div class="content"></div>
+        </div>
         <!-- footer -->
         <div class="footer"></div>
       </main>
