--- a/E9/layout-2/index.html
+++ b/E9/layout-2/index.html
@@ -6,18 +6,16 @@
       <link href="../css/main.css" rel="stylesheet">
     </head>
     <body>
+      <header><div class="header"></div></header>
       <main class="grid">
-        <!-- header -->
-        <div class="header"></div>
-        <div class="nav"></div>
-        <!-- columns -->
-        <div class="columns">
-          <div class="content"></div>
-          <div class="content"></div>
-          <div class="content"></div>
-        </div>
-        <!-- footer -->
-        <div class="footer"></div>
-      </main>
+          <div class="nav"></div>
+          <div class="columns">
+            <div class="content"></div>
+            <div class="content"></div>
+            <div class="content"></div></div>
+        </main>
+        <footer>
+          <div class="footer"></div>
+        </footer>
     </body>
 <html>
