--- a/E9/layout-2/index.html
+++ b/E9/layout-2/index.html
@@ -6,13 +6,12 @@
       <link href="../css/main.css" rel="stylesheet">
     </head>
     <body>
-      <header><div class="header"></div></header>
-      <main class="grid">
+        <main class="grid">
+          <header><div class="header"></div></header>
           <div class="nav"></div>
-          <div class="columns">
-            <div class="content"></div>
-            <div class="content"></div>
-            <div class="content"></div></div>
+          <div class="column"></div>
+          <div class="column"></div>
+          <div class="column"></div>
         </main>
         <footer>
           <div class="footer"></div>
