--- a/E9/layout-3/index.html
+++ b/E9/layout-3/index.html
@@ -7,14 +7,14 @@
     </head>
     <body>
       <main class="blog">
-        <div class="header1"></div>
-        <!-- columns -->
+        <header><div class="header1"></div></header>
         <div class="rec"></div>
         <div class="rec2"></div>
         <div class="footer1"></div>
         <div class="rec"></div>
         <div class="rec2"></div>
-        <div class="footer1"></div>
+        <div class="footer1">
       </main>
+      <footer></div></footer>
     </body>
 <html>
