--- a/E9/layout-4/index.html
+++ b/E9/layout-4/index.html
@@ -6,7 +6,24 @@
       <link href="../css/main.css" rel="stylesheet">
     </head>
     <body>
-      <main class="#">
+      <main class="court">
+        <div class="left1"></div>
+        <div class="middletop"></div>
+        <div class="square1"></div>
+        <div class="square2"></div>
+        <div class="right1"></div>
+        <div class="shape6"></div>
+        <div class="shape7"></div>
+        <div class="shape8"></div>
+        <div class="shape9"></div>
+        <div class="shape10"></div>
+        <div class="shape11"></div>
+        <div class="shape12"></div>
+        <div class="shape13"></div>
+        <div class="shape14"></div>
+        <div class="shape15"></div>
+        <div class="shape16"></div>
+        <div class="shape17"></div>
       </main>
     </body>
 <html>
