--- a/E9/index.html
+++ b/E9/index.html
@@ -13,6 +13,6 @@
         <li><a href="layout-2/index.html">Column Grid</a></li>
         <li><a href="layout-3/index.html">Blog Layout</a></li>
         <li><a href="layout-4/index.html">Tennis Court</a></li>
-        <li><a href="layout-5/index.html">California Case</a></li>-->
+        <li><a href="layout-5/index.html">California Case</a></li>
     </body>
   <html>
