--- a/E9/layout-4/index.html
+++ b/E9/layout-4/index.html
@@ -7,23 +7,24 @@
     </head>
     <body>
       <main class="court">
-        <div class="left1"></div>
-        <div class="middletop"></div>
-        <div class="square1"></div>
-        <div class="square2"></div>
-        <div class="right1"></div>
-        <div class="shape6"></div>
-        <div class="shape7"></div>
-        <div class="shape8"></div>
-        <div class="shape9"></div>
-        <div class="shape10"></div>
-        <div class="shape11"></div>
-        <div class="shape12"></div>
-        <div class="shape13"></div>
-        <div class="shape14"></div>
-        <div class="shape15"></div>
-        <div class="shape16"></div>
-        <div class="shape17"></div>
+        <div class="top">
+          <div class="left1"></div>
+          <div class="middle">
+            <div class="middletop"></div>
+            <div class="square1"></div>
+            <div class="square2"></div>
+          </div>
+          <div class="right1"></div>
+        </div>
+        <div class="bottom">
+          <div class="left2"></div>
+          <div class="middle2">
+            <div class="square3"></div>
+            <div class="square4"></div>
+            <div class="middlebottom"></div>
+          </div>
+          <div class="right2"></div>
+        </div>
       </main>
     </body>
 <html>
