Cali in progress

--- a/E9/layout-5/index.html
+++ b/E9/layout-5/index.html
@@ -6,7 +6,86 @@
       <link href="../css/main.css" rel="stylesheet">
     </head>
     <body>
-      <main class="#">
+      <main class="cali">
+        <div class="leftcolumn">
+          <div class="first">
+              <div class="block"></div>
+              <div class="block"></div>
+              <div class="block"></div>
+              <div class="block"></div>
+              <div class="block"></div>
+              <div class="block"></div>
+              <div class="block"></div>
+          </div>
+          <div class="second">
+              <div class="block"></div>
+              <div class="block1"></div>
+              <div class="block1"></div>
+              <div class="block1"></div>
+          </div>
+          <div class="third">
+              <div class="block2"></div>
+              <div class="block2"></div>
+              <div class="block3"></div>
+              <div class="block4"></div>
+              <div class="block5"></div>
+          </div>
+          <div class="fourth">
+              <div class="block2"></div>
+              <div class="block2"></div>
+              <div class="block6"></div>
+              <div class="block7"></div>
+              <div class="block8"></div>
+          </div>
+          <div class="fifth">
+            <div class="largest"></div>
+            <div class="block9"></div>
+            <div class="block10"></div>
+          </div>
+        </div>
+
+        <div class="middlecolumn">
+          <div class="sixth">
+              <div class="block2"></div>
+              <div class="block2"></div>
+              <div class="block3"></div>
+              <div class="block4"></div>
+              <div class="block5"></div>
+          </div>
+          <div class="seventh">
+              <div class="block2"></div>
+              <div class="block2"></div>
+              <div class="block3"></div>
+              <div class="block11"></div>
+              <div class="block11"></div>
+              <div class="block12"></div>
+          </div>
+          <div class="eighth">
+              <div class="block13"></div>
+              <div class="block14"></div>
+              <div class="block14"></div>
+              <div class="block13"></div>
+              <div class="block13"></div>
+          </div>
+          <div class="ninth">
+              <div class="block15"></div>
+              <div class="block16"></div>
+              <div class="block16"></div>
+              <div class="block15"></div>
+              <div class="block15"></div>
+          </div>
+          <div class="tenth">
+              <div class="block17"></div>
+              <div class="block17"></div>
+          </div>
+          <div class="tenth">
+                <div class="block17"></div>
+                <div class="block17"></div>
+          </div>
+
+          </div>
+        </div>
+        </div>
       </main>
     </body>
 <html>
