--- a/website/24hours/index.html
+++ b/website/24hours/index.html
@@ -4,66 +4,134 @@
       <meta charset="utf-8">
       <title>24 Hours in Porto</title>
       <link rel="stylesheet" href="https://use.typekit.net/ofy6ohe.css">
-      <link rel="stylesheet" href="css/main.css">
+      <link rel="stylesheet" href="../css/main.css">
       </head>
   <body>
     <header>
       <nav>
         <ul>
-          <li>Porto, Portugal</li>
-          <li>About</li>
-          <li>Sights</li>
-          <li>24 Hours in Porto</li>
+          <li><a href="../index.html">Porto, Portugal</a></li>
+          <li><a href="../about/index.html">About</a></li>
+          <li><a href="../sights/index.html">Sights</a></li>
+          <li><a href="../24hours/index.html">24 Hours in Porto</a></li>
         </ul>
       <nav>
     </header>
     <h1> 24 HOURS IN PORTO</h1>
     <p>Twenty-four hours in Porto? No problem, through personal experience I traveled to Porto for less than two days to experience enough that I would be hungry to go back again.</p>
-    <p><img src="../images/luisIBridgeEmpty.jpg" alt="Empty Bridge"/></p>
-    <p><img src="../images/luisBridgeRiver.jpg" alt="Close Up Bridge"/></p>
-    <p><img src="../images/luisBridge.jpg" alt="Bridge Engraving"/></p>
+    <main class="bridges">
+      <div class="emptybridge">
+        <img src="../images/luisIBridgeEmpty.jpg" alt="Empty Bridge"/>
+      </div>
+      <div class="closebridge">
+        <img src="../images/luisBridgeRiver.jpg" alt="Close Up Bridge"/>
+      </div>
+      <div class="engrave">
+        <img src="../images/luisBridge.jpg" alt="Bridge Engraving"/>
+      </div>
+    </main>
     <h3>Luís I Bridge</h3>
       <p>If you wake up early around 7-8 AM there are absolutely barely any folks wandering the streets. You can walk along the bridge without worrying about cars or other tourists blocking that perfect photo you want to capture.</p>
-    <p><img src="../images/wallsRainwaytrain.jpg" alt="Train Tiles"/></p>
-    <p><img src="../images/wallsRainwayPeople.jpg" alt="Inside Trainstation"/></p>
-    <p><img src="../images/chapelAlmasDeSantaCatrina.jpg" alt="Chapel"/></p>
+    <main class="train">
+      <div class="trainwalls">
+        <img src="../images/wallsRainwaytrain.jpg" alt="Train Tiles"/>
+      </div>
+      <div class="tiles">
+        <img src="../images/wallsRainwayPeople.jpg" alt="Inside Trainstation"/>
+      </div>
+      <div class="santachapel">
+        <img src="../images/chapelAlmasDeSantaCatrina.jpg" alt="Chapel"/>
+      </div>
+    </main>
     <h3>São Bento Railway Station  & Chapel Almas de Santa Catarina</h3>
       <p>I visited these spots early in the day as well and managed to get some nice shots of the beautiful tile work.</p>
-    <p><img src="../images/pasteisDeNata.jpg" alt="Egg Tarts"/></p>
-    <p><img src="../images/pasteisDeNataCoffee.jpg" alt="Coffee"/></p>
+    <main class="tarts">
+      <div class"eggtarts">
+        <img src="../images/pasteisDeNata.jpg" alt="Egg Tarts"/>
+      </div>
+      <div class="coffee">
+        <img src="../images/pasteisDeNataCoffee.jpg" alt="Coffee"/>
+      </div>
+    </main>
     <h3>Manteigaria - Fábrica de Pastéis de Nata</h3>
       <p>If you visit Portugal you must try these famous egg tart pastries! They are a traditional snack here that are absolutely delicious. You have the option to dust some cinnamon sugar for that extra flavor. They are a cross between a custard tart and a cake. The outside is super flakey and the inside is filled with a creamy and sweet custard.</p>
-    <p><img src="../images/livrariaLello.jpg" alt="Library Entrance"/></p>
-    <p><img src="../images/libraryStairs.jpg" alt="Library Stairs"/></p>
+    <main class="lellolibrary">
+      <div class="libraryentrance">
+        <img src="../images/livrariaLello.jpg" alt="Library Entrance"/>
+      </div>
+      <div class="librarystairs">
+        <img src="../images/libraryStairs.jpg" alt="Library Stairs"/>
+      </div>
+    </main>
     <h3>Livraria Lello</h3>
       <p>If you love to read you must stop by this beautiful library. The line was long and the process to get tickets are not very simple in person. Make sure you purchase tickets from the bookshop located on the corner next to Livraria Lello first before waiting in line. The wait time was approximately half an hour to an hour.</p>
-    <p><img src="../images/igrejaTiles.jpg" alt="Igreja Tiles"/></p>
+    <main class="igrejachurch">
+      <div class="igrejatiles">
+        <img src="../images/igrejaTiles.jpg" alt="Igreja Tiles"/>
+      </div>
+    </main>
     <h3>Igreja do Carmo</h3>
       <p>This church was next to the library so we quickly stopped by to snap some photos.</p>
-    <p><img src="../images/clerigosChurch.jpg" alt="Clerigo Church"/></p>
-    <p><img src="../images/clerigosChurchTower.jpg" alt="Church Tower"/></p>
+    <main class="clerigoschurch">
+      <div class="frontchurch">
+        <img src="../images/clerigosChurch.jpg" alt="Clerigo Church"/>
+      </div>
+      <div class="churchtower">
+        <img src="../images/clerigosChurchTower.jpg" alt="Church Tower"/>
+      </div>
+    </main>
     <h3>Clérigos Church</h3>
       <p>You can stop by here to capture a view of Porto. It gets very busy and the wait time can take up to an hour so be mindful of your time.</p>
-    <p><img src="../images/francesinhaCloseup.jpg" alt="Sandwich"/></p>
+    <main class="cafesantiago">
+      <div class="sandwich">
+        <img src="../images/francesinhaCloseup.jpg" alt="Sandwich"/>
+      </div>
+    </main>
     <h3>Café Santiago - Famous Francesinha sandwich</h3>
       <p>We waited outside with empty stomachs waiting to try the famous Francesinha sandwich. It is made with bread, wet-cured ham, linguiça, fresh sausage like chipolata, steak or roast meat, and covered with melted cheese and a hot and thick spiced tomato and beer sauce. It is normally served with french fries. This restaurant is specifically known for this sandwich, it was absolutely worth the wait!</p>
-    <p><img src="../images/majesticCafeCoffee.jpg" alt="Majestic Coffee"/></p>
-    <p><img src="../images/majesticCafealmondTart.jpg" alt="Almondtart"/></p>
+    <main class="majestic">
+      <div class="majesticcoffee">
+        <img src="../images/majesticCafeCoffee.jpg" alt="Majestic Coffee"/>
+      </div>
+      <div class="almondtart">
+        <img src="../images/majesticCafealmondTart.jpg" alt="Almondtart"/>
+      </div>
+    </main>
     <h3>Majestic Café</h3>
       <p>We sat and grabbed a cup of coffee and had a snack. This is a Belle Epoque-era cafe with ornate interior featuring carved wood, mirrors & chandeliers.</p>
-    <p><img src="../images/roads.jpg" alt="Roads"/></p>
+    <main class="road">
+      <div class="stoneroad">
+        <img src="../images/roads.jpg" alt="Roads"/>
+      </div>
+    </main>
     <h3>Ribeira Square</h3>
       <p>There are a lot of restaurants and shops to bring back local gifts for yourself, friends and family. It is located right next to the Douro River and the Luís I Bridge. There were plenty of tent vendors selling unique goods such as tiles, placemats, and many trinkets.</p>
-    <p><img src="../images/telefericoDeGaia.jpg" alt="Cable Car"/></p>
+    <main class="cable">
+      <div class="stoneroad">
+        <img src="../images/telefericoDeGaia.jpg" alt="Cable Car"/>
+      </div>
+    </main>
     <h3>Teleferico de Gaia</h3>
       <p>After buying goodies you can walk across the Luís I Bridge to ride the cable car. It gives a great view of Porto and the Douro River.</p>
-    <p><img src="../images/opaparicoDessertBox.jpg" alt="Dessert box"/></p>
-    <p><img src="../images/opaparicoMenu.jpg" alt="Menu"/></p>
-    <p><img src="../images/opaparicoApps.jpg" alt="Appetizers"/></p>
+    <main class="paparico">
+      <div class="dessertbox">
+        <img src="../images/opaparicoDessertBox.jpg" alt="Dessert box"/>
+      </div>
+      <div class="menu">
+        <img src="../images/opaparicoMenu.jpg" alt="Menu"/>
+      </div>
+      <div class="apps">
+        <img src="../images/opaparicoApps.jpg" alt="Appetizers"/>
+      </div>
+    </main>
     <h3>O Paparico</h3>
       <p>If you like good food and fine dining this place is perfect. The setting is rustic with centuries-old rock walls, wooden tables, and elegant chandeliers. This place was cozy and has some of the best foods I have tried during my Portugal visit.</p>
     <footer>
-      <p>© 2020 Travel Blog. Created by Sandy Chuah.</p>
+      <main class="footer">
+        <div>
+        <div class="logo"></div>
+        <div class="copyright"><p>© 2020 Travel Blog. Created by Sandy Chuah.</p></div>
+      </main>
     </footer>
   </body>
 </html>
