--- a/website/about/index.html
+++ b/website/about/index.html
@@ -4,20 +4,24 @@
       <meta charset="utf-8">
       <title>About</title>
       <link rel="stylesheet" href="https://use.typekit.net/ofy6ohe.css">
-      <link rel="stylesheet" href="css/main.css">
+      <link rel="stylesheet" href="../css/main.css">
       </head>
   <body>
     <header>
       <nav>
         <ul>
-          <li>Porto, Portugal</li>
-          <li>About</li>
-          <li>Sights</li>
-          <li>24 Hours in Porto</li>
+          <li><a href="../index.html">Porto, Portugal</a></li>
+          <li><a href="../about/index.html">About</a></li>
+          <li><a href="../sights/index.html">Sights</a></li>
+          <li><a href="../24hours/index.html">24 Hours in Porto</a></li>
         </ul>
       <nav>
     </header>
-    <p><img src="../images/boatView.jpg" alt="Boat View"/></p>
+      <main class="about">
+        <div class="boat">
+            <img src="../images/boatView.jpg" alt="Boat View">
+        </div>
+      </main>
       <h3>When to Visit:</h3>
         <p>The best time to visit Porto is from May to September when the weather is often sunny and warm. Overall, Porto experiences a moderate climate. Summertime temps are high but bearable, and the breezes and nearby beaches will help you stay cool.</p>
       <h3>At the airport:</h3>
@@ -31,7 +35,10 @@
       <h3>Porto orientation:</h3>
           <p>The whole of Porto’s compact historic centre has been awarded UNESCO World Heritage status, so walking is certainly the best way to discover the city.</p>
       <footer>
-          <p>© 2020 Travel Blog. Created by Sandy Chuah.</p>
+        <main class="footer">
+          <div class="logo"></div>
+        </main>
+        <p>© 2020 Travel Blog. Created by Sandy Chuah.</p>
       </footer>
   </body>
 </html>
