--- a/website/index.html
+++ b/website/index.html
@@ -21,6 +21,9 @@
     <p><img src="images/portoOverlook.jpg" alt="Porto High View"/></p>
     <p>Portugal’s second city is a laid-back destination full of pretty shops, historic alleyways, and stories from its time as an iconic European trade city. Visit for its magnificent architecture, its burgeoning modern gastronomy, and the delights of a relaxed city with a strong cultural identity.</p>
     <footer>
+        <main class="footer">
+          <div class="logo"></div>
+        </main>
       <p>© 2020 Travel Blog. Created by Sandy Chuah.</p>
     </footer>
   </body>
