--- a/E8/index.html
+++ b/E8/index.html
@@ -7,12 +7,13 @@
       <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-      <h1> Exercise 8: Patterns</h1>
-      <ul>
-        <li><a href="pattern1/index.html">Pattern 1</a></li>
-        <li><a href="pattern2/index.html">Pattern 2</a></li>
-        <li><a href="pattern3/index.html">Pattern 3</a></li>
-        <li><a href="pattern4/index.html">Pattern 4</a></li>
-        <li><a href="pattern5/index.html">Pattern 5</a></li>
+      <h1><li><a href="../index.html">Exercise 8: Patterns</a></li></h1>
+        <ul>
+          <li><a href="pattern1/index.html">Pattern 1</a></li>
+          <li><a href="pattern2/index.html">Pattern 2</a></li>
+          <li><a href="pattern3/index.html">Pattern 3</a></li>
+          <li><a href="pattern4/index.html">Pattern 4</a></li>
+          <li><a href="pattern5/index.html">Pattern 5</a></li>
+        </ul>
     </body>
   </html>
