--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
         </ul>
       <h2>Porto, Portugal Web Pages:</h2>
         <ul>
-          <li><a href="p1/index.html">First Design Layouts</a></li>
-          <li><a href="p2/index.html">Second Design Layouts</a></li>
+          <li><a href="design1/index.html">First Design Layouts</a></li>
+          <li><a href="design2/index.html">Second Design Layouts</a></li>
+          <li><a href="design3/index.html">Third Design Layouts</a></li>
         </ul>
       </body>
   </html>
