Removed bullets and Cali Case

--- a/E7/index.html
+++ b/E7/index.html
@@ -11,7 +11,7 @@
       </style>
     </head>
     <body>
-      <h1><li><a href="../index.html">Exercise 7: Seven-Principles</a></li></h1>
+      <h1><a href="../index.html">Exercise 7: Seven-Principles</a></h1>
 
       <div><h2>Seven Principles of Typographic Contrast</h2></div>
 
