--- a/E8/index.html
+++ b/E8/index.html
@@ -7,7 +7,7 @@
       <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-      <h1><li><a href="../index.html">Exercise 8: Patterns</a></li></h1>
+      <h1><a href="../index.html">Exercise 8: Patterns</a></h1>
         <ul>
           <li><a href="pattern1/index.html">Pattern 1</a></li>
           <li><a href="pattern2/index.html">Pattern 2</a></li>
