--- a/E9/index.html
+++ b/E9/index.html
@@ -7,7 +7,7 @@
       <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-      <h1> <li><a href="../index.html">Exercise 9: Layouts</a></li></h1>
+      <h1> <a href="../index.html">Exercise 9: Layouts</a></h1>
       <ul>
         <li><a href="layout-1/index.html">Checker Board</a></li>
         <li><a href="layout-2/index.html">Column Grid</a></li>
