--- a/E9/layout-2/index.html
+++ b/E9/layout-2/index.html
@@ -9,9 +9,11 @@
         <main class="grid">
           <header><div class="header"></div></header>
           <div class="nav"></div>
-          <div class="column"></div>
-          <div class="column"></div>
-          <div class="column"></div>
+          <div class="cloumns">
+            <div class="column"></div>
+            <div class="column"></div>
+            <div class="column"></div>
+          </div>
         </main>
         <footer>
           <div class="footer"></div>
