--- a/E9/test/index.html
+++ b/E9/test/index.html
@@ -2,20 +2,24 @@
 <html>
   <head>
       <meta charset="utf-8">
-      <title>Column Grid</title>
+      <title>Class Exercise</title>
       <link href="css/main.css" rel="stylesheet">
     </head>
     <body>
-      <main class="grid">
-        <!-- header -->
-        <div class="header"></div>
-        <div class="nav"></div>
-        <!-- columns -->
-        <div class="left-side-bar"></div>
-        <div class="content"></div>
-        <div class="right-side-bar"></div>
-        <!-- footer -->
-        <div class="footer"></div>
+      <main class="diagram">
+        <div class="topleft"></div>
+          <div class="onebyone"></div>
+          <div class="onebyone"></div>
+          <div class="onebyone"></div>
+          <div class="twobyone"></div>
+          <div class="onebyone1"></div>
+          <div class="onebyone1"></div>
+          <div class="twobyone"></div>
+        </div>
+        <div class="onebytwo"></div>
+
+
+
       </main>
     </body>
 <html>
