--- a/E9/index.html
+++ b/E9/index.html
@@ -14,6 +14,6 @@
         <li><a href="layout-3/index.html">Blog Layout</a></li>
         <li><a href="layout-4/index.html">Tennis Court</a></li>
         <li><a href="layout-5/index.html">California Case</a></li>
-        <li><a href="test/index.html">Case Exercise</a></li>
+        <li><a href="test/index.html">Class Exercise</a></li>
     </body>
   <html>
