--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <li><a href="E7/index.html">Exercise 7: Seven-Principles</a></li>
           <li><a href="E8/index.html">Exercise 8: Patterns</a></li>
           <li><a href="E9/index.html">Exercise 9: Layouts</a></li>
+          <li><a href="E9/test/index.html">Class Exercise</a></li>
         </ul>
       <h2>Project:</h2>
         <ul>
