--- a/E9/test/index.html
+++ b/E9/test/index.html
@@ -7,19 +7,18 @@
     </head>
     <body>
       <main class="diagram">
-        <div class="topleft"></div>
+        <div class="leftgroup">
           <div class="onebyone"></div>
           <div class="onebyone"></div>
           <div class="onebyone"></div>
           <div class="twobyone"></div>
           <div class="onebyone1"></div>
-          <div class="onebyone1"></div>
-          <div class="twobyone"></div>
+          <div class="onebyone2"></div>
+          <div class="twobyone1"></div>
         </div>
-        <div class="onebytwo"></div>
-
-
-
+        <div class="rightcolumn">
+          <div class="onebytwo"></div>
+          <div class="onebyone"></div>
       </main>
     </body>
 <html>
