--- a/index.html
+++ b/index.html
@@ -7,29 +7,35 @@
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-      <div><h1>Sandy's Work</h1></div>
-      <h2>Exercises:</h2>
-        <ul>
-          <li><a href="E1/index.html">Exercise 1: 20 Questions</a></li>
-          <li><a href="E2/index.html">Exercise 2: Make the Grid</a></li>
-          <li><a href="E3/index.html">Exercise 3: Organization and Naming</a></li>
-          <li><a href="E4/index.html">Exercise 4: Site Map</a></li>
-          <li><a href="E5/index.html">Exercise 5: Wireframes</a></li>
-          <li><a href="E6/index.html">Exercise 6: Type on Screen I</a></li>
-          <li><a href="E7/index.html">Exercise 7: Seven-Principles</a></li>
-          <li><a href="E8/index.html">Exercise 8: Patterns</a></li>
-          <li><a href="E9/index.html">Exercise 9: Layouts</a></li>
-          <li><a href="E9/test/index.html">Class Exercise</a></li>
-        </ul>
-      <h2>Project:</h2>
-        <ul>
-          <li><a href="website/index.html">Website</a></li>
-        </ul>
-      <h2>Porto, Portugal Web Pages:</h2>
-        <ul>
-          <li><a href="design1/index.html">First Design Layouts</a></li>
-          <li><a href="design2/index.html">Second Design Layouts</a></li>
-          <li><a href="design3/index.html">Third Design Layouts</a></li>
-        </ul>
+      <header><h1 >Sandy's Work</h1></header>
+      <main>
+        <div class="column">
+          <h2>Exercises:</h2>
+            <ul>
+              <li><a href="E1/index.html">Exercise 1: 20 Questions</a></li>
+              <li><a href="E2/index.html">Exercise 2: Make the Grid</a></li>
+              <li><a href="E3/index.html">Exercise 3: Organization and Naming</a></li>
+              <li><a href="E4/index.html">Exercise 4: Site Map</a></li>
+              <li><a href="E5/index.html">Exercise 5: Wireframes</a></li>
+              <li><a href="E6/index.html">Exercise 6: Type on Screen I</a></li>
+              <li><a href="E7/index.html">Exercise 7: Seven-Principles</a></li>
+              <li><a href="E8/index.html">Exercise 8: Patterns</a></li>
+              <li><a href="E9/index.html">Exercise 9: Layouts</a></li>
+              <li><a href="E9/test/index.html">Class Exercise</a></li>
+            </ul>
+        </div>
+        <div class="column">
+          <h2>Project:</h2>
+            <ul>
+              <li><a href="website/index.html">Website</a></li>
+            </ul>
+          <h2>Porto, Portugal Web Pages:</h2>
+            <ul>
+              <li><a href="design1/index.html">First Design Layouts</a></li>
+              <li><a href="design2/index.html">Second Design Layouts</a></li>
+              <li><a href="design3/index.html">Third Design Layouts</a></li>
+            </ul>
+        </div>
+      </main>
       </body>
   </html>
