--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
               <li><a href="E7/index.html">Exercise 7: Seven-Principles</a></li>
               <li><a href="E8/index.html">Exercise 8: Patterns</a></li>
               <li><a href="E9/index.html">Exercise 9: Layouts</a></li>
+              <li><a href="E10/index.html">Exercise 10: Visualizing Responsiveness</a></li>
               <li><a href="E9/test/index.html">Class Exercise</a></li>
             </ul>
         </div>
