--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
               <li><a href="E8/index.html">Exercise 8: Patterns</a></li>
               <li><a href="E9/index.html">Exercise 9: Layouts</a></li>
               <li><a href="E10/index.html">Exercise 10: Visualizing Responsiveness</a></li>
+              <li><a href="E11/index.html">Exercise 11: Type on Screen II</a></li>
               <li><a href="E9/test/index.html">Class Exercise</a></li>
             </ul>
         </div>
