--- a/E11/layout1/index.html
+++ b/E11/layout1/index.html
@@ -2,6 +2,7 @@
   <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>E11</title>
         <link rel="stylesheet" href="../css/main.css">
         <link rel="stylesheet" href="https://use.typekit.net/ofy6ohe.css">
