--- a/website/index.html
+++ b/website/index.html
@@ -6,25 +6,31 @@
     <link rel="stylesheet" href="https://use.typekit.net/ofy6ohe.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
-  <body>
-    <!-- Header -->
-    <header>
+  <header>
+  <main class="Home">
+    <div class="HomeImage">
+      <div class="pageheader"<a href="index.html">Porto, Portugal</a>
+      </div>
       <nav>
         <ul>
-          <li><a href="index.html">Porto, Portugal</a><li>
           <li><a href="about/index.html">About</a></li>
+          <li>|</li>
           <li><a href="sights/index.html">Sights</a></li>
+          <li>|</li>
           <li><a href="24hours/index.html">24 Hours in Porto</a></li>
         </ul>
       <nav>
-    </header>
-    <p><img src="images/portoOverlook.jpg" alt="Porto High View"/></p>
-    <p>Portugal’s second city is a laid-back destination full of pretty shops, historic alleyways, and stories from its time as an iconic European trade city. Visit for its magnificent architecture, its burgeoning modern gastronomy, and the delights of a relaxed city with a strong cultural identity.</p>
+    </div>
+  </header>
+  <body>
+    <div class="hometext">
+      Portugal’s second city is a laid-back destination full of pretty shops, historic alleyways, and stories from its time as an iconic European trade city. Visit for its magnificent architecture, its burgeoning modern gastronomy, and the delights of a relaxed city with a strong cultural identity.
+    </div>
+  </main>
     <footer>
-        <main class="footer">
-          <div class="logo"></div>
-        </main>
-      <p>© 2020 Travel Blog. Created by Sandy Chuah.</p>
+      <div class="logo"></div>
+      <div class="footer">© 2020 Travel Blog. Created by Sandy Chuah.</div>
+      <p></p>
     </footer>
   </body>
 </html>
