--- a/website/index.html
+++ b/website/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Porto, Portugal</title>
     <link rel="stylesheet" href="https://use.typekit.net/ofy6ohe.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
-  <header>
   <main class="Home">
     <div class="HomeImage">
       <div class="pageheader"<a href="index.html">Porto, Portugal</a>
